# gav

./: .gitignore  CMakeLists.txt  CustomSnackbar.qml  Debug.qml  Main.qml  MediaComponent.qml  MediaControls.qml  MediaControlsComponent.qml  MediaScreen.qml  PlayList.qml  PlayListComponent.qml  README.md  custommediaplayer.cpp  custommediaplayer.h  main.cpp
.github/workflows/: build.yaml
assets/: resource.rc
assets/images/: icon.icns
support/: cpack.cmake  gav.desktop  installerscript.qs
